--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -1,1 +1,11 @@
-<p>home-component works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4 d-none d-md-block sidebar">
+            <app-movie-list></app-movie-list>
+        </div>
+        <div class="col-md-8">
+            <!-- <app-movie-detail></app-movie-detail> -->
+            <app-add-movie></app-add-movie>
+        </div>
+    </div>
+</div>
