--- a/src/app/movie-item/movie-item.component.html
+++ b/src/app/movie-item/movie-item.component.html
@@ -1,1 +1,8 @@
-<p>movie-item works!</p>
+<div class="card">
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
