--- a/src/app/navigation-component/navigation-component.component.html
+++ b/src/app/navigation-component/navigation-component.component.html
@@ -9,11 +9,13 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Add Movie</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/addMovie">Add Movie</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Top 5</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/topfive">Top 5</a>
         </li>
       </ul>
     </div>
   </nav>
+
+<router-outlet></router-outlet>
