--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-4 d-none d-md-block sidebar">
-            <app-movie-list></app-movie-list>
+        <div [@openClose]="showSideBar ? 'open' : 'closed'" class="col-md-4 d-md-block sidebar sidebar--mobile">
+                <app-movie-list [movieList]="moviesList" ></app-movie-list>
         </div>
         <div class="col-md-8">
             <!-- <app-movie-detail></app-movie-detail> -->
-            <app-add-movie></app-add-movie>
+            <app-movie-detail></app-movie-detail>
         </div>
     </div>
 </div>
