--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,3 +1,3 @@
-<app-movie-item></app-movie-item>
-<app-movie-item></app-movie-item>
-<app-movie-item ></app-movie-item>
+<div *ngFor="let movie of movieList">
+    <app-movie-item (click)="movieDetail(movie)" [movieinfo]='movie'></app-movie-item>
+</div>
