--- a/src/app/navigation-component/navigation-component.component.html
+++ b/src/app/navigation-component/navigation-component.component.html
@@ -1,12 +1,14 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">The movies app</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-light bg-dark">
+    <a class="navbar-brand mr-0 mr-md-2 navba--font-color" href="#">
+      <img src="../assets/cinema.png" width="30" height="30" alt="">
+      The Movies App
+    </a>
+     <button class="navbar-toggler" type="button" (click)="toggleSideBar()">
       <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
+    </button> 
+      <ul class="custom-nav nav nav-pills">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/addMovie">Add Movie</a>
@@ -15,7 +17,6 @@
           <a class="nav-link" routerLinkActive="active" routerLink="/topfive">Top 5</a>
         </li>
       </ul>
-    </div>
   </nav>
 
 <router-outlet></router-outlet>
