added gloabl styles
added globla styles, active clases  and comunications between components

--- a/src/app/add-movie/add-movie.component.html
+++ b/src/app/add-movie/add-movie.component.html
@@ -3,7 +3,7 @@
             <span>
                 Header
             </span>
-            <button class="btn btn-primary btn--display-right" type="submit">Submit form</button>
+            <button class="btn  btn--display-right" type="submit">Save Movie</button>
         </div>
     <div class="card-body">
         <form class="needs-validation custom-form" novalidate>
