--- a/src/app/navigation-component/navigation-component.component.scss
+++ b/src/app/navigation-component/navigation-component.component.scss
@@ -1,15 +1,16 @@
+@import '../styles/variables';
 .navbar {
   .navba--font-color {
-    color: #e50914;
+    color: $secondary-color
   } 
   .nav-pills 
   {
     .nav-link {
-        color: #e50914;
+        color: $secondary-color;
     }
     .nav-link.active {
-        color: #343a40;
-        background-color: #e50914;
+        color: $main-color;
+        background-color: $secondary-color
   }
   } 
   .navbar-toggler {
@@ -19,6 +20,6 @@
 @media only screen and (max-width: 767px) {
  .navbar .navbar-toggler {
     display: block;
-    background-color: #e50914;
+    background-color: $secondary-color;
   }
 }
