--- a/src/app/add-movie/add-movie.component.scss
+++ b/src/app/add-movie/add-movie.component.scss
@@ -1,17 +1,9 @@
-.card {
-    .card-header--display{
-        display: flex;
-        .btn--display-right {
-            margin-left: auto;
-        }
-    }
-    textarea {
-        display: block;
-        width: 100%;
-        -webkit-box-sizing: border-box;
-           -moz-box-sizing: border-box;
-                box-sizing: border-box;
-
-    }
+@import '../styles/buttons';
+textarea {
+    display: block;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
 
 }
