--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -1,11 +1,19 @@
 <div class="container-fluid">
     <div class="row">
-        <div [@openClose]="showSideBar ? 'open' : 'closed'" class="col-md-4 d-md-block sidebar sidebar--mobile">
-                <app-movie-list [movieList]="moviesList" ></app-movie-list>
-        </div>
-        <div class="col-md-8">
-            <!-- <app-movie-detail></app-movie-detail> -->
-            <app-movie-detail></app-movie-detail>
-        </div>
+        <ng-container *ngIf="!emptyState">
+            <div [@openClose]="showSideBar ? 'open' : 'closed'" class="col-md-4 d-md-block sidebar sidebar--mobile">
+                <app-movie-list (sendMovieInfo)="getMovieInfo($event)" [movieList]="moviesList"></app-movie-list>
+            </div>
+            <div class="col-md-8">
+                <!-- <app-movie-detail></app-movie-detail> -->
+                <app-movie-detail [movieDetail]="movieDetail"></app-movie-detail>
+            </div>
+        </ng-container>
+        <ng-container *ngIf="emptyState">
+            <div class="alert alert-light alert--center" role="alert">
+                <p>You haven`t created a movie yet. Click on Add Movie button to create one.</p>
+                <button routerLink="/addMovie" class="btn">Add Movie</button>
+              </div>
+        </ng-container>
     </div>
 </div>
