--- a/src/app/home-component/home-component.component.scss
+++ b/src/app/home-component/home-component.component.scss
@@ -1,3 +1,18 @@
+@import '../styles/variables';
+@import '../styles/buttons';
+.container-fluid {
+    .alert--center {
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+    
+}
+
 @media only screen and (max-width: 767px) { 
     .sidebar--mobile {
         display: none;
