--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -1,8 +1,9 @@
- <div class="card">
+ <div *ngIf="movieDetail?.title; else elseBlock" class="card">
     <div class="card-body">
-        <a href="#" class="btn btn-primary">Go somewhere</a>
         <div class="card bg-light">
-            <div class="card-header">Header</div>
+            <div class="card-header card-header--display">{{movieDetail?.title ? movieDetail.title: 'header' }}
+              <button routerLink="/addMovie" class="btn btn--display-right">Add New Movie</button>
+            </div>
             <div class="row no-gutters">
               <div class="col-md-4">
                 <img class="card-img-top" src=".../100px180/?text=Image cap" alt="Card image cap">
@@ -17,5 +18,11 @@
           </div>
     </div>
   </div> 
+  <ng-template #elseBlock>
+    <div class="alert alert-light" role="alert">
+     Please click on a movie item to display additional
+     details about the movie
+    </div>
+  </ng-template>
 
 
