--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,3 +1,7 @@
-<div *ngFor="let movie of movieList">
-    <app-movie-item (click)="movieDetail(movie)" [movieinfo]='movie'></app-movie-item>
-</div>
+<ng-container *ngFor="let movie of movieList; let i = index">
+    <div class="movie-item-container" (click)="movieDetail(movie, i)"
+    [class.active]="selectedIndex === i" >
+        <app-movie-item  [selectedMovie]="selectedIndex === i" [movieinfo]='movie'
+        ></app-movie-item>
+    </div>
+</ng-container>
