--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/scss/bootstrap";
+$fa-font-path: "../node_modules/font-awesome/fonts";
+@import "~font-awesome/css/font-awesome.min.css";
+.card {
+    .card-header--display{
+        display: flex;
+        .btn--display-right {
+            margin-left: auto;
+        }
+    }
+}
