--- a/src/app/movie-item/movie-item.component.html
+++ b/src/app/movie-item/movie-item.component.html
@@ -2,8 +2,9 @@
     <div class="card-body">
       <h5 class="card-title">{{movieinfo.title}}</h5>
       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <i class="fa-trash"></i>
-      <i class="fas fa-file"></i>
     </div>
-  </div>
+    <div *ngIf="selectedMovie" class="icon-trash">
+      <i class="fa fa-trash-o" aria-hidden="true"></i>
+    </div>
+</div>
 
