--- a/src/app/navigation-component/navigation-component.component.scss
+++ b/src/app/navigation-component/navigation-component.component.scss
@@ -1,7 +1,7 @@
 @import '../styles/variables';
 .navbar {
   .navba--font-color {
-    color: $secondary-color
+    color: $secondary-color;
   } 
   .nav-pills 
   {
