--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/scss/bootstrap";
 $fa-font-path: "../node_modules/font-awesome/fonts";
-@import "~font-awesome/css/font-awesome.min.css";
+@import '../node_modules/font-awesome/scss/font-awesome.scss';
 .card {
     .card-header--display{
         display: flex;
