--- a/src/app/add-movie/add-movie.component.html
+++ b/src/app/add-movie/add-movie.component.html
@@ -3,38 +3,39 @@
             <span>
                 Header
             </span>
-            <button class="btn  btn--display-right" type="submit">Save Movie</button>
         </div>
     <div class="card-body">
-        <form class="needs-validation custom-form" novalidate>
-            <div class="row no-gutters">
-                <div class="col-md-4 mb-3">
+        <form class="needs-validation custom-form" (ngSubmit)="onSubmit()" #movieform="ngForm">
+            <div class="row">
+                <div class="col-md-4">
                     <label for="validationCustom01">Movie Title</label>
                     <input type="text" class="form-control" id="validationCustom01" placeholder="First name"
-                        value="Mark" required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <label for="validationCustom02">Release Date</label>
-                    <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Otto"
+                        class="form-control"
+                        ngModel
+                        name="title"
                         required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4">
+                    <label for="validationCustom02">Release Date</label>
+                  
+                    <div class="input-group">
+                        <input class="form-control" placeholder="yyyy-mm-dd"
+                               name="date" [(ngModel)]="datemodel" ngbDatepicker #d="ngbDatepicker"
+                               required>
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
+                            <i class="fa fa-calendar" aria-hidden="true"></i>
+                          </button>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-md-4">
                     <label for="validationCustomUsername">Movie Image</label>
                     <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="inputGroupPrepend">@</span>
-                        </div>
-                        <input type="text" class="form-control" id="validationCustomUsername" placeholder="Username"
-                            aria-describedby="inputGroupPrepend" required>
-                        <div class="invalid-feedback">
-                            Please choose a username.
-                        </div>
+                        <input class="btn input-file" (change)="picked($event)" type="file"
+                        name="imagescr"
+                        ngModel
+                        required>
                     </div>
                 </div>
             </div>
@@ -42,10 +43,14 @@
                 <div class="col-md-12">
                     <div class="form-group">
                         <label for="Description">Description</label>
-                        <textarea class="form-control" id="Description" rows="12"></textarea>
+                        <textarea class="form-control"
+                         id="Description" rows="12"
+                        name="description"
+                        ngModel></textarea>
                       </div>
                 </div>
             </div>
+            <button  [disabled]="!movieform.valid" class="btn btn--display-right" type="submit">Save Movie</button>
         </form>
 
     </div>
