--- a/src/app/styles/_buttons.scss
+++ b/src/app/styles/_buttons.scss
@@ -1,6 +1,6 @@
 @import './variables';
 
-button {
+button, ::-webkit-file-upload-button {
     background-color: $secondary-color;
     color: $white;
     outline: none;
@@ -8,5 +8,19 @@ button {
         background-color: $main-color;
         color: $white;
     }
-
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
 } 
+
+
