--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,5 @@ $fa-font-path: "../node_modules/font-awesome/fonts";
         }
     }
 }
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
