--- a/src/app/add-movie/add-movie.component.html
+++ b/src/app/add-movie/add-movie.component.html
@@ -50,7 +50,7 @@
                       </div>
                 </div>
             </div>
-            <button  [disabled]="!movieform.valid" class="btn btn--display-right" type="submit">Save Movie</button>
+            <button id='saveMovie' [disabled]="!movieform.valid" class="btn btn--display-right" type="submit">Save Movie</button>
         </form>
 
     </div>
