--- a/src/app/navigation-component/navigation-component.component.html
+++ b/src/app/navigation-component/navigation-component.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-dark">
+<nav id="spec-navigation" class="navbar navbar-light bg-dark">
     <a class="navbar-brand mr-0 mr-md-2 navba--font-color" href="#">
       <img src="../assets/cinema.png" width="30" height="30" alt="">
       The Movies App
@@ -11,7 +11,7 @@
           <a class="nav-link" routerLinkActive="active" routerLink="/home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" routerLink="/addMovie">Add Movie</a>
+          <a class="nav-link" id="addMovie" routerLinkActive="active" routerLink="/addMovie">Add Movie</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/topfive">Top 5</a>
