--- a/src/app/navigation-component/navigation-component.component.html
+++ b/src/app/navigation-component/navigation-component.component.html
@@ -1,5 +1,5 @@
 <nav id="spec-navigation" class="navbar navbar-light bg-dark">
-    <a class="navbar-brand mr-0 mr-md-2 navba--font-color" href="#">
+    <a (click)="homeView()" id="logo" class="navbar-brand mr-0 mr-md-2 navba--font-color" href="#">
       <img src="../assets/cinema.png" width="30" height="30" alt="">
       The Movies App
     </a>
