--- a/src/app/add-movie/add-movie.component.html
+++ b/src/app/add-movie/add-movie.component.html
@@ -16,8 +16,7 @@
                         required>
                 </div>
                 <div class="col-md-4">
-                    <label for="validationCustom02">Release Date</label>
-                  
+                    <label for="validationCustom02">Release Date</label>       
                     <div class="input-group">
                         <input class="form-control" placeholder="yyyy-mm-dd"
                                name="date" [(ngModel)]="datemodel" ngbDatepicker #d="ngbDatepicker"
@@ -32,7 +31,7 @@
                 <div class="col-md-4">
                     <label for="validationCustomUsername">Movie Image</label>
                     <div class="input-group">
-                        <input class="btn input-file" (change)="picked($event)" type="file"
+                        <input class="btn input-file" id="fUpload" accept="image/*" (change)="picked($event, content)" type="file"
                         name="imagescr"
                         ngModel
                         required>
@@ -55,3 +54,21 @@
 
     </div>
 </div>
+<ng-template #content let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Warning</h4>
+      <a type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </a>
+    </div>
+    <div class="modal-body">
+      <form>
+        <div class="form-group">
+          <p>{{modalText}}</p>
+        </div>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Close</button>
+    </div>
+  </ng-template>
