--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-navigation-component></app-navigation-component>
 
-
+<div [@routeAnimations]="o && o.activatedRouteData 
+  && o.activatedRouteData['animation']">
+  <router-outlet #o="outlet"></router-outlet>
+</div>
 
