--- a/src/app/top-five/top-five.component.html
+++ b/src/app/top-five/top-five.component.html
@@ -1,4 +1,10 @@
-<div class="card" *ngFor="let movie of moviesTopFive">
+<div *ngIf="showSpinner" class="spinner-container">
+  <div class="spinner-border text-dark" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+</div>
+<ng-container *ngIf="!showSpinner">
+  <div  class="card" *ngFor="let movie of moviesTopFive">
     <div class="row no-gutters">
       <div class="col-md-2">
         <img src="{{movie.image}}" class="card-img" alt="...">
@@ -11,4 +17,6 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> 
+</ng-container>
+ 
