--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -19,10 +19,16 @@
     </div>
   </div>
   <ng-template #elseBlock>
-    <div class="alert alert-light" role="alert">
-     Please click on a movie item to display additional
-     details about the movie
-    </div>
+    <div class="row h-100">
+      <div class="col-sm-12 my-auto">
+        <div class="card card-block">
+          <div class="alert alert-light" role="alert">
+            Please click on a movie item to display additional
+            details about the movie
+           </div>
+        </div>
+      </div>
+   </div>
   </ng-template>
 
 
