--- a/src/app/add-movie/add-movie.component.html
+++ b/src/app/add-movie/add-movie.component.html
@@ -1,7 +1,7 @@
 <div class="card bg-light">
         <div class="card-header card-header--display">
             <span>
-                Header
+                Add Movie
             </span>
         </div>
     <div class="card-body">
