--- a/src/app/home-component/home-component.component.scss
+++ b/src/app/home-component/home-component.component.scss
@@ -10,7 +10,9 @@
         transform: translate(-50%, -50%);
         text-align: center;
     }
-    
+    .jumbotron {
+        margin: auto;
+    }
 }
 
 @media only screen and (max-width: 767px) { 
