--- a/src/app/movie-item/movie-item.component.html
+++ b/src/app/movie-item/movie-item.component.html
@@ -1,7 +1,7 @@
 <div class="card" [ngClass]="{'text-white bg-dark': selectedMovie}">
     <div class="card-body">
       <h5 class="card-title">{{movieinfo.title}}</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text">Release Date: {{movieinfo.releaseDate | date}}</p>
     </div>
     <div *ngIf="selectedMovie" class="icon-trash">
       <i (click)="removeMove(movieIndex)" class="fa fa-trash-o" aria-hidden="true"></i>
